# tock-bootloader

./: .gitignore  .travis.yml  Makefile  README.md
.github/workflows/: release.yml  release_clue_nrf52840.yml  release_microbit_v2.yml
arch/: README.md
arch/bootloader_cortexm/: Cargo.toml
arch/bootloader_cortexm/src/: jumper.rs  lib.rs
boards/: Common.mk  Makefile.common  kernel_layout.ld
boards/clue_nrf52840-bootloader/: Cargo.toml  Makefile  README.md  build.rs  layout.ld
boards/clue_nrf52840-bootloader/src/: main.rs
boards/hail-bootloader/: Cargo.toml  Makefile  README.md  build.rs  chip_layout.ld  layout.ld
boards/hail-bootloader/src/: io.rs  main.rs
boards/imix-bootloader/: Cargo.toml  Makefile  README.md  build.rs
boards/imix-bootloader/src/: main.rs
boards/makepython-nrf52840/: Cargo.toml  Makefile  README.md  build.rs
boards/makepython-nrf52840/src/: main.rs
boards/microbit_v2-bootloader/: Cargo.toml  Makefile  build.rs
boards/microbit_v2-bootloader/src/: main.rs
boards/nano33-bootloader/: Cargo.toml  Makefile  README.md  build.rs
boards/nano33-bootloader/src/: main.rs
boards/nano33ble-bootloader/: Cargo.toml  Makefile  README.md  build.rs
boards/nano33ble-bootloader/src/: main.rs
boards/nrf52-bootloader/: Cargo.toml  Makefile  README.md  build.rs  layout.ld
boards/nrf52-bootloader/src/: main.rs
boards/nrf52-cdc-bootloader/: Cargo.toml  Common.mk  Makefile  build.rs  layout.ld
boards/nrf52-cdc-bootloader/src/: main.rs
boards/nrf52840dk-bootloader/: Cargo.toml  Makefile  README.md  build.rs  layout.ld
boards/nrf52840dk-bootloader/src/: main.rs
boards/wm1110_dev-bootloader/: Cargo.toml  Makefile  build.rs  layout.ld
boards/wm1110_dev-bootloader/src/: main.rs
bootloader/: Cargo.toml  Makefile  README.md  flash-bootloader.jlink
bootloader/src/: active_notifier_ledon.rs  active_notifier_null.rs  bl_commands.c  bootloader.c  bootloader.rs  bootloader_crc.rs  bootloader_entry_always.rs  bootloader_entry_gpio.rs  flash_large_to_small.rs  interfaces.rs  lib.rs  main.c  null_scheduler.rs  uart_receive_multiple_timeout.rs  uart_receive_timeout.rs
bootloader/src/config/: board.h  conf_clock.h
chips/: README.md
chips/bootloader_nrf52/: Cargo.toml
chips/bootloader_nrf52/src/: bootloader_entry_doublereset.rs  bootloader_entry_gpregret.rs  lib.rs
legacy/: README.md
legacy/src/: asf.h  bootloader.h  jumpfunc.s
legacy/src/ASF/common/services/ioport/sam/: ioport_gpio.h
protocol/: Cargo.toml  README.md
protocol/examples/: basic_encode.rs
protocol/src/: lib.rs
src/: attributes.c  bl_commands.c  bootloader.c  bootloader.h  bootloader.ld  bootloader_board.h  crc32.c  info.h  main.c
src/ASF/sam/utils/: compiler.h
tools/: install_cargo_fmt.sh
tools/bootloader_attributes/: Cargo.toml  README.md
tools/bootloader_attributes/src/: lib.rs
