[package]
name = "hailbootloader"
version = "0.1.0"
authors = ["Tock Project Developers <tock-dev@googlegroups.com>"]
build = "build.rs"

[profile.dev]
panic = "abort"
lto = true
opt-level = 0
debug = true

[profile.release]
panic = "abort"
lto = true

[dependencies]
cortexm4 = { git = "https://github.com/tock/tock", tag = "release-1.3"  }
capsules = { git = "https://github.com/tock/tock", tag = "release-1.3"  }
kernel = { git = "https://github.com/tock/tock", tag = "release-1.3"  }
sam4l = { git = "https://github.com/tock/tock", tag = "release-1.3"  }
bootloader = { path = "../../bootloader" }

[build-dependencies]
bootloader_attributes = { path = "../../tools/bootloader_attributes" }
