[package]
name = "makepython-nrf52840-bootloader"
version = "0.1.0"
authors = ["Tock Project Developers <tock-dev@googlegroups.com>"]
build = "build.rs"
edition = "2021"

[dependencies]
cortexm4 = { git = "https://github.com/tock/tock", rev = "2ff6868" }
capsules-core = { git = "https://github.com/tock/tock", rev = "2ff6868" }
capsules-extra = { git = "https://github.com/tock/tock", rev = "2ff6868" }
kernel = { git = "https://github.com/tock/tock", rev = "2ff6868" }
nrf52 = { git = "https://github.com/tock/tock", rev = "2ff6868" }
nrf52840 = { git = "https://github.com/tock/tock", rev = "2ff6868" }
components = { git = "https://github.com/tock/tock", rev = "2ff6868" }
nrf52_components = { git = "https://github.com/tock/tock", rev = "2ff6868" }

# For Development
#cortexm4 = { path = "../../../tock/arch/cortex-m4" }
#capsules = { path = "../../../tock/capsules" }
#kernel = { path = "../../../tock/kernel" }
#nrf52 = { path = "../../../tock/chips/nrf52" }
#nrf52840 = { path = "../../../tock/chips/nrf52840" }
#components = { path = "../../../tock/boards/components" }
#nrf52_components = { path = "../../../tock/boards/nordic/nrf52_components" }

bootloader = { path = "../../bootloader" }
bootloader_nrf52 = { path = "../../chips/bootloader_nrf52" }
bootloader_cortexm = { path = "../../arch/bootloader_cortexm" }


[build-dependencies]
bootloader_attributes = { path = "../../tools/bootloader_attributes" }

[profile.dev]
panic = "abort"
lto = false
opt-level = "z"
debug = true

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
debug = true
