[package]
name = "nrf52bootloader"
version = "0.1.0"
authors = ["Tock Project Developers <tock-dev@googlegroups.com>"]
build = "build.rs"

[profile.dev]
panic = "abort"
lto = false
opt-level = "z"
debug = true

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
debug = true

[dependencies]
cortexm4 = { git = "https://github.com/tock/tock" }
capsules = { git = "https://github.com/tock/tock" }
kernel = { git = "https://github.com/tock/tock" }
nrf52 = { git = "https://github.com/tock/tock" }
nrf5x = { git = "https://github.com/tock/tock" }
bootloader = { path = "../../bootloader" }

[build-dependencies]
bootloader_attributes = { path = "../../tools/bootloader_attributes" }
