[package]
name = "bootloader_nrf52"
version = "0.1.0"
authors = ["Tock Project Developers <tock-dev@googlegroups.com>"]
edition = "2021"

[dependencies]
kernel = { git = "https://github.com/tock/tock", rev = "c56c68824" }
nrf52 = { git = "https://github.com/tock/tock", rev = "c56c68824" }
cortexm4 = { git = "https://github.com/tock/tock", rev = "c56c68824" }

#kernel = { path = "../../../tock/kernel" }
#nrf52 = { path = "../../../tock/chips/nrf52" }
#cortexm4 = { path = "../../../tock/arch/cortex-m4" }

bootloader = { path = "../../bootloader" }
